<?xml version="1.0"?>
<package format="3">
  <name>rov_obstacle_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the underwater ROV obstacle avoidance prototype.</description>
  <maintainer email="andrea@example.com">Andrea</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rov_obstacle_avoidance</exec_depend>
  <exec_depend>rov_obstacle_perception</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
