<?xml version="1.0"?>
<package format="3">
  <name>rov_obstacle_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for underwater ROV obstacle perception and avoidance.</description>
  <maintainer email="andrea@example.com">Andrea</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

