<?xml version="1.0"?>
<package format="3">
  <name>rov_obstacle_sim_bridge</name>
  <version>0.1.0</version>
  <description>Pure-Python simulation oracle geometry for converting world obstacle positions into camera-space detections.</description>
  <maintainer email="andrea@example.com">Andrea</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>rov_obstacle_msgs</depend>
  <exec_depend>python3-pyyaml</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pyyaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
